feat(security): add admin panel protection and timed tokens